--- a/public/admin.html
+++ b/public/admin.html
@@ -2,104 +2,265 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard - ISP Lookup</title>
-  <link rel="stylesheet" href="styles.tailwind.css" />
   <link rel="icon" href="img/favicon.ico" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
+    * {
+      font-family: 'Inter', sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      margin: 0;
+    }
+
+    #auth-section {
+      width: 100%;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+
+    .auth-card {
+      background: white;
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.35);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      transition: all 0.3s ease;
+    }
+
+    .auth-card:hover {
+      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.45);
+    }
+
+    .logo-container {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 30px;
+    }
+
+    .logo-container img {
+      max-height: 80px;
+      width: auto;
+      object-fit: contain;
+      filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.1));
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      font-weight: 700;
+      color: #3b82f6;
+      margin-bottom: 30px;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      font-weight: 500;
+      color: #4b5563;
+      font-size: 14px;
+      text-align: center;
+      width: 100%;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px 16px;
+      border: 2px solid #e5e7eb;
+      border-radius: 10px;
+      font-size: 14px;
+      transition: all 0.3s ease;
+      text-align: center;
+      display: block;
+      margin: 0 auto;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: #3b82f6;
+      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+    }
+
+    input::placeholder {
+      color: #9ca3af;
+    }
+
+    button[type="submit"] {
+      width: 100%;
+      padding: 12px;
+      background: #3b82f6;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      margin-top: 10px;
+    }
+
+    button[type="submit"]:hover {
+      background: #2563eb;
+    }
+
+    .toggle-text {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 14px;
+      color: #6b7280;
+    }
+
+    .toggle-text button {
+      color: #3b82f6;
+      font-weight: 600;
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 0;
+      margin-left: 4px;
+    }
+
+    .toggle-text button:hover {
+      text-decoration: underline;
+    }
+
+    .error-message {
+      color: #ef4444;
+      font-size: 14px;
+      text-align: center;
+      margin-top: -15px;
+      margin-bottom: 15px;
+      display: none;
+    }
+
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans p-6">
-
+<body>
   <!-- Login/Register Section -->
-  <div id="auth-section" class="max-w-md mx-auto mt-20">
-    <div class="bg-white border border-gray-300 rounded-lg shadow-lg p-8">
-      <h1 class="text-3xl font-bold text-center mb-6">Admin Access</h1>
-
-      <!-- Toggle between Login and Register -->
-      <div class="flex mb-6">
-        <button id="show-login" class="flex-1 py-2 px-4 bg-blue-600 text-white font-semibold rounded-l">Login</button>
-        <button id="show-register" class="flex-1 py-2 px-4 bg-gray-300 text-gray-700 font-semibold rounded-r">Register</button>
-      </div>
-
+  <div id="auth-section">
+    <div class="auth-card">
       <!-- Login Form -->
       <form id="login-form" class="space-y-4">
-        <div>
-          <label for="login-email" class="block mb-1 font-medium">Email</label>
-          <input type="email" id="login-email" required class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400" />
+        <h1>Welcome Back</h1>
+        <div class="logo-container">
+          <img src="/img/us_isp_logos/generic_logo.png" alt="Logo" />
         </div>
-        <div>
-          <label for="login-password" class="block mb-1 font-medium">Password</label>
-          <input type="password" id="login-password" required class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400" />
+        <div class="form-group">
+          <label for="login-email">Email</label>
+          <input type="email" id="login-email" required placeholder="you@example.com" />
         </div>
-        <div id="login-error" class="text-red-600 text-sm hidden"></div>
-        <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded font-semibold">Login</button>
+        <div class="form-group">
+          <label for="login-password">Password</label>
+          <input type="password" id="login-password" required placeholder="••••••••" />
+        </div>
+        <div id="login-error" class="error-message"></div>
+        <button type="submit">Sign In</button>
       </form>
+
+      <!-- Toggle to Register -->
+      <div class="toggle-text">
+        <p>
+          Don't have an account?
+          <button id="show-register">Sign up</button>
+        </p>
+      </div>
 
       <!-- Register Form -->
       <form id="register-form" class="space-y-4 hidden">
-        <div>
-          <label for="register-firstname" class="block mb-1 font-medium">First Name</label>
-          <input type="text" id="register-firstname" required class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400" />
+        <h1>Create Account</h1>
+        <div class="form-group">
+          <label for="register-firstname">First Name</label>
+          <input type="text" id="register-firstname" required placeholder="John" />
         </div>
-        <div>
-          <label for="register-lastname" class="block mb-1 font-medium">Last Name</label>
-          <input type="text" id="register-lastname" required class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400" />
+        <div class="form-group">
+          <label for="register-lastname">Last Name</label>
+          <input type="text" id="register-lastname" required placeholder="Doe" />
         </div>
-        <div>
-          <label for="register-email" class="block mb-1 font-medium">Email</label>
-          <input type="email" id="register-email" required class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400" />
+        <div class="form-group">
+          <label for="register-email">Email</label>
+          <input type="email" id="register-email" required placeholder="you@example.com" />
         </div>
-        <div>
-          <label for="register-password" class="block mb-1 font-medium">Password</label>
-          <input type="password" id="register-password" required minlength="6" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400" />
+        <div class="form-group">
+          <label for="register-password">Password</label>
+          <input type="password" id="register-password" required minlength="6" placeholder="••••••••" />
         </div>
-        <div id="register-error" class="text-red-600 text-sm hidden"></div>
-        <button type="submit" class="w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded font-semibold">Register</button>
+        <div id="register-error" class="error-message"></div>
+        <button type="submit">Sign Up</button>
       </form>
+
+      <!-- Toggle back to Login -->
+      <div id="back-to-login" class="toggle-text hidden">
+        <p>
+          Already have an account?
+          <button id="show-login">Sign in</button>
+        </p>
+      </div>
     </div>
   </div>
 
   <!-- Dashboard Section (Hidden by default) -->
-  <div id="dashboard-section" class="max-w-7xl mx-auto hidden">
-    <div class="flex justify-between items-center mb-6">
-      <h1 class="text-3xl font-bold">Admin Dashboard</h1>
-      <div class="space-x-2">
-        <span id="user-name" class="text-gray-600"></span>
-        <button id="logout-btn" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded">Logout</button>
-        <a href="/" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded inline-block">Back to Home</a>
+  <div id="dashboard-section" class="max-w-7xl mx-auto hidden" style="background: #f9fafb; padding: 24px;">
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px;">
+      <h1 style="font-size: 1.875rem; font-weight: bold;">Admin Dashboard</h1>
+      <div style="display: flex; gap: 8px;">
+        <span id="user-name" style="color: #4b5563;"></span>
+        <button id="logout-btn" style="background: #dc2626; color: white; padding: 8px 16px; border-radius: 4px; border: none; cursor: pointer;">Logout</button>
+        <a href="/" style="background: #2563eb; color: white; padding: 8px 16px; border-radius: 4px; text-decoration: none;">Back to Home</a>
       </div>
     </div>
 
     <!-- Stats Section -->
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
-      <div class="bg-white border border-gray-300 rounded-lg p-6 shadow">
-        <h3 class="text-sm text-gray-600 mb-1">Total Queries</h3>
-        <p class="text-3xl font-bold text-blue-600" id="total-queries">0</p>
+    <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 16px; margin-bottom: 24px;">
+      <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
+        <h3 style="font-size: 0.875rem; color: #4b5563; margin-bottom: 4px;">Total Queries</h3>
+        <p style="font-size: 1.875rem; font-weight: bold; color: #2563eb;" id="total-queries">0</p>
       </div>
-      <div class="bg-white border border-gray-300 rounded-lg p-6 shadow">
-        <h3 class="text-sm text-gray-600 mb-1">Current Page</h3>
-        <p class="text-3xl font-bold text-green-600" id="current-page">1</p>
+      <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
+        <h3 style="font-size: 0.875rem; color: #4b5563; margin-bottom: 4px;">Current Page</h3>
+        <p style="font-size: 1.875rem; font-weight: bold; color: #16a34a;" id="current-page">1</p>
       </div>
-      <div class="bg-white border border-gray-300 rounded-lg p-6 shadow">
-        <h3 class="text-sm text-gray-600 mb-1">Total Pages</h3>
-        <p class="text-3xl font-bold text-purple-600" id="total-pages">0</p>
+      <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
+        <h3 style="font-size: 0.875rem; color: #4b5563; margin-bottom: 4px;">Total Pages</h3>
+        <p style="font-size: 1.875rem; font-weight: bold; color: #9333ea;" id="total-pages">0</p>
       </div>
     </div>
 
     <!-- Search and Controls -->
-    <div class="bg-white border border-gray-300 rounded-lg p-6 shadow mb-6">
-      <div class="flex flex-col md:flex-row gap-4 items-end">
-        <div class="flex-1">
-          <label for="search-input" class="block mb-1 font-medium">Search</label>
+    <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05); margin-bottom: 24px;">
+      <div style="display: flex; gap: 16px; align-items: flex-end; flex-wrap: wrap;">
+        <div style="flex: 1; min-width: 200px;">
+          <label for="search-input" style="display: block; margin-bottom: 4px; font-weight: 500;">Search</label>
           <input
             type="text"
             id="search-input"
             placeholder="Search by IP, organization, or logo..."
-            class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400"
+            style="width: 100%; padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px;"
           />
         </div>
         <div>
-          <label for="sort-field" class="block mb-1 font-medium">Sort By</label>
-          <select id="sort-field" class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400">
+          <label for="sort-field" style="display: block; margin-bottom: 4px; font-weight: 500;">Sort By</label>
+          <select id="sort-field" style="padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px;">
             <option value="created_at">Date</option>
             <option value="searched_ip">Searched IP</option>
             <option value="organization_name">Organization</option>
@@ -108,15 +269,15 @@
           </select>
         </div>
         <div>
-          <label for="sort-order" class="block mb-1 font-medium">Order</label>
-          <select id="sort-order" class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400">
+          <label for="sort-order" style="display: block; margin-bottom: 4px; font-weight: 500;">Order</label>
+          <select id="sort-order" style="padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px;">
             <option value="desc">Descending</option>
             <option value="asc">Ascending</option>
           </select>
         </div>
         <div>
-          <label for="page-size" class="block mb-1 font-medium">Per Page</label>
-          <select id="page-size" class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400">
+          <label for="page-size" style="display: block; margin-bottom: 4px; font-weight: 500;">Per Page</label>
+          <select id="page-size" style="padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px;">
             <option value="25">25</option>
             <option value="50" selected>50</option>
             <option value="100">100</option>
@@ -126,24 +287,24 @@
     </div>
 
     <!-- Table -->
-    <div class="bg-white border border-gray-300 rounded-lg shadow overflow-hidden">
-      <div class="overflow-x-auto">
-        <table class="w-full">
-          <thead class="bg-gray-100 border-b border-gray-300">
+    <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; box-shadow: 0 1px 2px rgba(0,0,0,0.05); overflow: hidden;">
+      <div style="overflow-x: auto;">
+        <table style="width: 100%; border-collapse: collapse;">
+          <thead style="background: #f3f4f6; border-bottom: 1px solid #d1d5db;">
             <tr>
-              <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase">ID</th>
-              <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase">Searched IP</th>
-              <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase">Organization</th>
-              <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase">Logo</th>
-              <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase">Visitor IP</th>
-              <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase">WAN</th>
-              <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase">Date</th>
-              <th class="px-4 py-3 text-center text-xs font-semibold text-gray-700 uppercase">Actions</th>
+              <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">ID</th>
+              <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Searched IP</th>
+              <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Organization</th>
+              <th style="padding: 4px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Logo</th>
+              <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Visitor IP</th>
+              <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">WAN</th>
+              <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Date</th>
+              <th style="padding: 8px; text-align: center; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Actions</th>
             </tr>
           </thead>
-          <tbody id="queries-table-body" class="divide-y divide-gray-200">
+          <tbody id="queries-table-body">
             <tr>
-              <td colspan="8" class="px-4 py-8 text-center text-gray-500">Loading...</td>
+              <td colspan="8" style="padding: 32px; text-align: center; color: #6b7280;">Loading...</td>
             </tr>
           </tbody>
         </table>
@@ -151,20 +312,20 @@
     </div>
 
     <!-- Pagination -->
-    <div class="flex justify-between items-center mt-6">
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 24px;">
       <button
         id="prev-page"
-        class="bg-gray-600 hover:bg-gray-700 text-white px-4 py-2 rounded disabled:bg-gray-300 disabled:cursor-not-allowed"
+        style="background: #4b5563; color: white; padding: 8px 16px; border-radius: 4px; border: none; cursor: pointer;"
         disabled
       >
         Previous
       </button>
-      <div class="text-sm text-gray-600">
+      <div style="font-size: 0.875rem; color: #4b5563;">
         Page <span id="page-info">1 of 1</span>
       </div>
       <button
         id="next-page"
-        class="bg-gray-600 hover:bg-gray-700 text-white px-4 py-2 rounded disabled:bg-gray-300 disabled:cursor-not-allowed"
+        style="background: #4b5563; color: white; padding: 8px 16px; border-radius: 4px; border: none; cursor: pointer;"
         disabled
       >
         Next
@@ -172,6 +333,7 @@
     </div>
   </div>
 
-  <script src="admin.js?v=5"></script>
+  <script src="admin.js?v=10"></script>
 </body>
 </html>
+
