--- a/public/reguser.html
+++ b/public/reguser.html
@@ -200,7 +200,11 @@
         </div>
         <div class="form-group">
           <label for="register-password">Password</label>
-          <input type="password" id="register-password" required minlength="6" placeholder="••••••••" />
+          <input type="password" id="register-password" required minlength="8" placeholder="••••••••" />
+        </div>
+        <div class="form-group">
+          <label for="register-password-confirm">Repeat Password</label>
+          <input type="password" id="register-password-confirm" required minlength="8" placeholder="••••••••" />
         </div>
         <div id="register-error" class="error-message"></div>
         <button type="submit">Sign Up</button>
@@ -232,10 +236,11 @@
     <!-- Navigation Tabs -->
     <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 8px; margin-bottom: 24px; display: flex; gap: 8px; align-items: center; flex-wrap: wrap;">
       <button id="tab-queries" class="tab-btn active" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #2563eb; color: white;">Queries</button>
-      <button id="tab-users" class="tab-btn" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: transparent; color: #4b5563;">Users</button>
+      <button id="tab-users" class="tab-btn" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: transparent; color: #4b5563; display: none;">Users</button>
+      <button id="tab-change-password" class="tab-btn" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: transparent; color: #4b5563;">Change Password</button>
       <div style="flex: 1;"></div>
-      <a href="/role-management" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #7c3aed; color: white; text-decoration: none; display: inline-block;">Role Management</a>
-      <a href="/api-tokens" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #059669; color: white; text-decoration: none; display: inline-block;">API Tokens</a>
+      <a href="/role-management" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #7c3aed; color: white; text-decoration: none; display: none;">Role Management</a>
+      <a href="/api-tokens" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #059669; color: white; text-decoration: none; display: none;">API Tokens</a>
     </div>
 
     <!-- Queries Section -->
@@ -458,6 +463,59 @@
     </div>
     <!-- End Users Section -->
 
+    <!-- Change Password Section -->
+    <div id="change-password-section" class="hidden">
+      <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 32px; max-width: 600px; margin: 0 auto; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+        <h2 style="font-size: 1.5rem; font-weight: bold; margin-bottom: 24px; color: #1f2937;">Change Password</h2>
+
+        <form id="change-password-form">
+          <div style="margin-bottom: 20px;">
+            <label for="current-password" style="display: block; margin-bottom: 8px; font-weight: 600; color: #374151;">Current Password</label>
+            <input type="password" id="current-password" required style="width: 100%; padding: 10px 14px; border: 1px solid #d1d5db; border-radius: 6px; box-sizing: border-box; font-size: 14px;" />
+          </div>
+
+          <div style="margin-bottom: 20px;">
+            <label for="new-password" style="display: block; margin-bottom: 8px; font-weight: 600; color: #374151;">New Password</label>
+            <input type="password" id="new-password" required style="width: 100%; padding: 10px 14px; border: 1px solid #d1d5db; border-radius: 6px; box-sizing: border-box; font-size: 14px;" />
+
+            <!-- Password Strength Meter -->
+            <div style="margin-top: 12px;">
+              <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 6px;">
+                <span style="font-size: 13px; font-weight: 500; color: #6b7280;">Password Strength:</span>
+                <span id="password-strength-text" style="font-size: 13px; font-weight: 600; color: #6b7280;">-</span>
+              </div>
+              <div style="width: 100%; height: 8px; background: #e5e7eb; border-radius: 4px; overflow: hidden;">
+                <div id="password-strength-bar" style="height: 100%; width: 0%; background: #d1d5db; transition: all 0.3s ease;"></div>
+              </div>
+              <div style="margin-top: 8px; font-size: 12px; color: #6b7280; line-height: 1.4;">
+                <p style="margin: 4px 0;">Password requirements:</p>
+                <ul style="margin: 4px 0; padding-left: 20px;">
+                  <li><strong>Required:</strong> Minimum 8 characters with letters and numbers</li>
+                  <li><strong>Recommended:</strong> 12+ characters for better security</li>
+                  <li>Mix uppercase and lowercase for stronger passwords</li>
+                  <li>Avoid common words or patterns (e.g., "password", "12345")</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div style="margin-bottom: 20px;">
+            <label for="confirm-new-password" style="display: block; margin-bottom: 8px; font-weight: 600; color: #374151;">Confirm New Password</label>
+            <input type="password" id="confirm-new-password" required style="width: 100%; padding: 10px 14px; border: 1px solid #d1d5db; border-radius: 6px; box-sizing: border-box; font-size: 14px;" />
+          </div>
+
+          <div id="change-password-error" style="color: #ef4444; font-size: 14px; margin-bottom: 16px; display: none; padding: 10px; background: #fee2e2; border-radius: 6px; border: 1px solid #fecaca;"></div>
+          <div id="change-password-success" style="color: #059669; font-size: 14px; margin-bottom: 16px; display: none; padding: 10px; background: #d1fae5; border-radius: 6px; border: 1px solid #a7f3d0;"></div>
+
+          <div style="display: flex; gap: 12px; justify-content: flex-end;">
+            <button type="button" id="cancel-password-change-btn" style="background: #6b7280; color: white; padding: 10px 20px; border-radius: 6px; border: none; cursor: pointer; font-weight: 600; font-size: 14px;">Cancel</button>
+            <button type="submit" style="background: #2563eb; color: white; padding: 10px 20px; border-radius: 6px; border: none; cursor: pointer; font-weight: 600; font-size: 14px;">Change Password</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- End Change Password Section -->
+
   </div>
 
   <!-- Edit User Modal -->
@@ -477,6 +535,14 @@
         <div style="margin-bottom: 16px;">
           <label for="edit-email" style="display: block; margin-bottom: 4px; font-weight: 500;">Email</label>
           <input type="email" id="edit-email" required style="width: 100%; padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px; box-sizing: border-box;" />
+        </div>
+        <div style="margin-bottom: 16px;">
+          <label for="edit-password" style="display: block; margin-bottom: 4px; font-weight: 500;">New Password <span style="color: #6b7280; font-weight: 400; font-size: 14px;">(leave blank to keep current)</span></label>
+          <input type="password" id="edit-password" style="width: 100%; padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px; box-sizing: border-box;" />
+        </div>
+        <div style="margin-bottom: 16px;">
+          <label for="edit-password-confirm" style="display: block; margin-bottom: 4px; font-weight: 500;">Confirm New Password</label>
+          <input type="password" id="edit-password-confirm" style="width: 100%; padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px; box-sizing: border-box;" />
         </div>
         <div id="edit-user-error" style="color: #ef4444; font-size: 14px; margin-bottom: 16px; display: none;"></div>
         <div style="display: flex; gap: 8px; justify-content: flex-end;">
